<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.traveling.ui.home.HomeFragment"
        android:label="@string/title_home">
        <action
            android:id="@+id/action_navigation_home_to_post_detail_screen"
            app:destination="@id/post_detail_screen" />
    </fragment>

    <fragment
        android:id="@+id/post_detail_screen"
        android:name="com.example.traveling.ui.post.PostDetailFragment"
        android:label="@string/title_post_detail">
        <argument
            android:name="post_id"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.traveling.PlaceholderFragment"
        android:label="@string/title_search">
        <argument
            android:name="arg_title_res"
            app:argType="reference"
            android:defaultValue="@string/title_search" />
        <argument
            android:name="arg_subtitle_res"
            app:argType="reference"
            android:defaultValue="@string/subtitle_search" />
        <argument
            android:name="arg_description_res"
            app:argType="reference"
            android:defaultValue="@string/placeholder_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.traveling.PlaceholderFragment"
        android:label="@string/title_messages">
        <argument
            android:name="arg_title_res"
            app:argType="reference"
            android:defaultValue="@string/title_messages" />
        <argument
            android:name="arg_subtitle_res"
            app:argType="reference"
            android:defaultValue="@string/subtitle_messages" />
        <argument
            android:name="arg_description_res"
            app:argType="reference"
            android:defaultValue="@string/placeholder_messages" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.traveling.PlaceholderFragment"
        android:label="@string/title_add">
        <argument
            android:name="arg_title_res"
            app:argType="reference"
            android:defaultValue="@string/title_add" />
        <argument
            android:name="arg_subtitle_res"
            app:argType="reference"
            android:defaultValue="@string/subtitle_add" />
        <argument
            android:name="arg_description_res"
            app:argType="reference"
            android:defaultValue="@string/placeholder_add" />
    </fragment>

    <fragment
        android:id="@+id/navigation_itinerary"
        android:name="com.example.traveling.PlaceholderFragment"
        android:label="@string/title_itinerary">
        <argument
            android:name="arg_title_res"
            app:argType="reference"
            android:defaultValue="@string/title_itinerary" />
        <argument
            android:name="arg_subtitle_res"
            app:argType="reference"
            android:defaultValue="@string/subtitle_itinerary" />
        <argument
            android:name="arg_description_res"
            app:argType="reference"
            android:defaultValue="@string/placeholder_itinerary" />
    </fragment>

    <fragment
        android:id="@+id/profile_screen"
        android:name="com.example.traveling.PlaceholderFragment"
        android:label="@string/title_profile">
        <argument
            android:name="arg_title_res"
            app:argType="reference"
            android:defaultValue="@string/title_profile" />
        <argument
            android:name="arg_subtitle_res"
            app:argType="reference"
            android:defaultValue="@string/subtitle_profile" />
        <argument
            android:name="arg_description_res"
            app:argType="reference"
            android:defaultValue="@string/placeholder_profile" />
    </fragment>

</navigation>

