<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/title_messages" />
    <item
        android:id="@+id/navigation_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/title_add" />
    <item
        android:id="@+id/navigation_itinerary"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/title_itinerary" />
</menu>

